tags/Cosmos-1.1/SOURCES/ModelGenerator/GspnParser/Gspn-parser.output
Terminals unused in grammar

   chr
   GspnName


Grammar

    0 $accept: GSPN "end of file"

    1 IntStringFormula: ival
    2                 | str
    3                 | LB IntStringFormula RB
    4                 | IntStringFormula PLUS IntStringFormula
    5                 | IntStringFormula MINUS IntStringFormula
    6                 | IntStringFormula MUL IntStringFormula
    7                 | IntStringFormula POWER IntStringFormula
    8                 | ABS LB IntStringFormula RB
    9                 | FLOOR LB IntStringFormula RB
   10                 | FLOOR LB IntStringFormula DIV IntStringFormula RB
   11                 | MIN LB IntStringFormula COMMA IntStringFormula RB
   12                 | MAX LB IntStringFormula COMMA IntStringFormula RB

   13 RealStringFormula: rval
   14                  | ival
   15                  | str
   16                  | LB RealStringFormula RB
   17                  | RealStringFormula DIV RealStringFormula
   18                  | RealStringFormula PLUS RealStringFormula
   19                  | RealStringFormula MINUS RealStringFormula
   20                  | RealStringFormula MUL RealStringFormula
   21                  | RealStringFormula POWER RealStringFormula
   22                  | ABS LB RealStringFormula RB
   23                  | FLOOR LB RealStringFormula RB
   24                  | MIN LB RealStringFormula COMMA RealStringFormula RB
   25                  | MAX LB RealStringFormula COMMA RealStringFormula RB

   26 GSPN: declarations definitions
   27     | declarations definitions redifinitions

   28 declarations: Constants Sizes Lists
   29             | Sizes Lists

   30 Constants: Constant
   31          | Constant Constants

   32 Sizes: NbPlaces NbTransitions
   33      | NbTransitions NbPlaces

   34 Constant: Const INT str EQ IntStringFormula SEMICOLON
   35         | Const DOUBLE str EQ RealStringFormula SEMICOLON

   36 Lists: PlacesList TransitionsList
   37      | TransitionsList PlacesList

   38 NbPlaces: NbPl EQ ival SEMICOLON
   39         | NbPl EQ str SEMICOLON

   40 NbTransitions: NbTr EQ ival SEMICOLON
   41              | NbTr EQ str SEMICOLON

   42 PlacesList: PList EQ '{' PLabels '}' SEMICOLON

   43 PLabels: str
   44        | PLabels COMMA str

   45 TransitionsList: TList EQ '{' TLabels '}' SEMICOLON

   46 TLabels: str
   47        | TLabels COMMA str

   48 definitions: PlacesDef TransitionsDef InArcs OutArcs
   49            | PlacesDef TransitionsDef InArcs OutArcs Inhibitors

   50 PlacesDef: marking EQ '{' PLACES '}' SEMICOLON

   51 PLACES: PLACE
   52       | PLACES PLACE

   53 PLACE: LB str COMMA IntStringFormula RB SEMICOLON

   54 TransitionsDef: transitions EQ '{' TRANSITIONS '}' SEMICOLON

   55 TRANSITIONS: TRANSITION
   56            | TRANSITIONS TRANSITION

   57 TRANSITION: LB str COMMA dist COMMA PRIORITY COMMA WEIGHT RB SEMICOLON
   58           | LB str COMMA dist COMMA PRIORITY COMMA WEIGHT COMMA MEMORY RB SEMICOLON
   59           | LB str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE RB SEMICOLON
   60           | LB str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE COMMA MEMORY RB SEMICOLON
   61           | LB str COMMA IMDT COMMA PRIORITY COMMA WEIGHT RB SEMICOLON

   62 WEIGHT: RealStringFormula

   63 PRIORITY: RealStringFormula

   64 SERVICE: SINGLE
   65        | INFINITE
   66        | MULTIPLE LB ival RB
   67        | MULTIPLE LB str RB

   68 MEMORY: AGEMEMORY
   69       | ENABLINGMEMORY

   70 dist: str LB params RB

   71 params: param
   72       | params COMMA param

   73 param: RealStringFormula

   74 InArcs: in EQ '{' incells '}' SEMICOLON

   75 incells: incell
   76        | incells incell

   77 incell: LB str COMMA str COMMA IntStringFormula RB SEMICOLON
   78       | LB str COMMA str RB SEMICOLON

   79 OutArcs: out EQ '{' outcells '}' SEMICOLON

   80 outcells: outcell
   81         | outcells outcell

   82 outcell: LB str COMMA str COMMA IntStringFormula RB SEMICOLON
   83        | LB str COMMA str RB SEMICOLON

   84 Inhibitors: inhibitor EQ '{' inhibcells '}' SEMICOLON

   85 inhibcells: inhibcell
   86           | inhibcells inhibcell

   87 inhibcell: LB str COMMA str COMMA IntStringFormula RB SEMICOLON
   88          | LB str COMMA str RB SEMICOLON

   89 redifinitions: TransitionsDef


Terminals, with rules where they appear

"end of file" (0) 0
'{' (123) 42 45 50 54 74 79 84
'}' (125) 42 45 50 54 74 79 84
error (256)
str (258) 2 15 34 35 39 41 43 44 46 47 53 57 58 59 60 61 67 70 77 78
    82 83 87 88
chr (259)
rval (260) 13
ival (261) 1 14 38 40 66
SEMICOLON (262) 34 35 38 39 40 41 42 45 50 53 54 57 58 59 60 61 74
    77 78 79 82 83 84 87 88
COMMA (263) 11 12 24 25 44 47 53 57 58 59 60 61 72 77 78 82 83 87 88
LB (264) 3 8 9 10 11 12 16 22 23 24 25 53 57 58 59 60 61 66 67 70 77
    78 82 83 87 88
RB (265) 3 8 9 10 11 12 16 22 23 24 25 53 57 58 59 60 61 66 67 70 77
    78 82 83 87 88
EQ (266) 34 35 38 39 40 41 42 45 50 54 74 79 84
DIV (267) 10 17
MUL (268) 6 20
PLUS (269) 4 18
MINUS (270) 5 19
POWER (271) 7 21
GspnName (272)
NbPl (273) 38 39
NbTr (274) 40 41
PList (275) 42
TList (276) 45
in (277) 74
out (278) 79
marking (279) 50
transitions (280) 54
Const (281) 34 35
INT (282) 34
DOUBLE (283) 35
inhibitor (284) 84
MIN (285) 11 24
MAX (286) 12 25
FLOOR (287) 9 10 23
ABS (288) 8 22
SINGLE (289) 64
INFINITE (290) 65
MULTIPLE (291) 66 67
ENABLINGMEMORY (292) 69
AGEMEMORY (293) 68
IMDT (294) 61
EXPO (295) 59 60


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
IntStringFormula (44)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12, on right: 3 4 5 6 7 8 9 10
    11 12 34 53 77 82 87
RealStringFormula (45)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25, on right: 16 17
    18 19 20 21 22 23 24 25 35 59 60 62 63 73
GSPN (46)
    on left: 26 27, on right: 0
declarations (47)
    on left: 28 29, on right: 26 27
Constants (48)
    on left: 30 31, on right: 28 31
Sizes (49)
    on left: 32 33, on right: 28 29
Constant (50)
    on left: 34 35, on right: 30 31
Lists (51)
    on left: 36 37, on right: 28 29
NbPlaces (52)
    on left: 38 39, on right: 32 33
NbTransitions (53)
    on left: 40 41, on right: 32 33
PlacesList (54)
    on left: 42, on right: 36 37
PLabels (55)
    on left: 43 44, on right: 42 44
TransitionsList (56)
    on left: 45, on right: 36 37
TLabels (57)
    on left: 46 47, on right: 45 47
definitions (58)
    on left: 48 49, on right: 26 27
PlacesDef (59)
    on left: 50, on right: 48 49
PLACES (60)
    on left: 51 52, on right: 50 52
PLACE (61)
    on left: 53, on right: 51 52
TransitionsDef (62)
    on left: 54, on right: 48 49 89
TRANSITIONS (63)
    on left: 55 56, on right: 54 56
TRANSITION (64)
    on left: 57 58 59 60 61, on right: 55 56
WEIGHT (65)
    on left: 62, on right: 57 58 59 60 61
PRIORITY (66)
    on left: 63, on right: 57 58 59 60 61
SERVICE (67)
    on left: 64 65 66 67, on right: 59 60
MEMORY (68)
    on left: 68 69, on right: 58 60
dist (69)
    on left: 70, on right: 57 58
params (70)
    on left: 71 72, on right: 70 72
param (71)
    on left: 73, on right: 71 72
InArcs (72)
    on left: 74, on right: 48 49
incells (73)
    on left: 75 76, on right: 74 76
incell (74)
    on left: 77 78, on right: 75 76
OutArcs (75)
    on left: 79, on right: 48 49
outcells (76)
    on left: 80 81, on right: 79 81
outcell (77)
    on left: 82 83, on right: 80 81
Inhibitors (78)
    on left: 84, on right: 49
inhibcells (79)
    on left: 85 86, on right: 84 86
inhibcell (80)
    on left: 87 88, on right: 85 86
redifinitions (81)
    on left: 89, on right: 27


state 0

    0 $accept: . GSPN "end of file"

    NbPl   shift, and go to state 1
    NbTr   shift, and go to state 2
    Const  shift, and go to state 3

    GSPN           go to state 4
    declarations   go to state 5
    Constants      go to state 6
    Sizes          go to state 7
    Constant       go to state 8
    NbPlaces       go to state 9
    NbTransitions  go to state 10


state 1

   38 NbPlaces: NbPl . EQ ival SEMICOLON
   39         | NbPl . EQ str SEMICOLON

    EQ  shift, and go to state 11


state 2

   40 NbTransitions: NbTr . EQ ival SEMICOLON
   41              | NbTr . EQ str SEMICOLON

    EQ  shift, and go to state 12


state 3

   34 Constant: Const . INT str EQ IntStringFormula SEMICOLON
   35         | Const . DOUBLE str EQ RealStringFormula SEMICOLON

    INT     shift, and go to state 13
    DOUBLE  shift, and go to state 14


state 4

    0 $accept: GSPN . "end of file"

    "end of file"  shift, and go to state 15


state 5

   26 GSPN: declarations . definitions
   27     | declarations . definitions redifinitions

    marking  shift, and go to state 16

    definitions  go to state 17
    PlacesDef    go to state 18


state 6

   28 declarations: Constants . Sizes Lists

    NbPl  shift, and go to state 1
    NbTr  shift, and go to state 2

    Sizes          go to state 19
    NbPlaces       go to state 9
    NbTransitions  go to state 10


state 7

   29 declarations: Sizes . Lists

    PList  shift, and go to state 20
    TList  shift, and go to state 21

    Lists            go to state 22
    PlacesList       go to state 23
    TransitionsList  go to state 24


state 8

   30 Constants: Constant .
   31          | Constant . Constants

    Const  shift, and go to state 3

    $default  reduce using rule 30 (Constants)

    Constants  go to state 25
    Constant   go to state 8


state 9

   32 Sizes: NbPlaces . NbTransitions

    NbTr  shift, and go to state 2

    NbTransitions  go to state 26


state 10

   33 Sizes: NbTransitions . NbPlaces

    NbPl  shift, and go to state 1

    NbPlaces  go to state 27


state 11

   38 NbPlaces: NbPl EQ . ival SEMICOLON
   39         | NbPl EQ . str SEMICOLON

    str   shift, and go to state 28
    ival  shift, and go to state 29


state 12

   40 NbTransitions: NbTr EQ . ival SEMICOLON
   41              | NbTr EQ . str SEMICOLON

    str   shift, and go to state 30
    ival  shift, and go to state 31


state 13

   34 Constant: Const INT . str EQ IntStringFormula SEMICOLON

    str  shift, and go to state 32


state 14

   35 Constant: Const DOUBLE . str EQ RealStringFormula SEMICOLON

    str  shift, and go to state 33


state 15

    0 $accept: GSPN "end of file" .

    $default  accept


state 16

   50 PlacesDef: marking . EQ '{' PLACES '}' SEMICOLON

    EQ  shift, and go to state 34


state 17

   26 GSPN: declarations definitions .
   27     | declarations definitions . redifinitions

    transitions  shift, and go to state 35

    $default  reduce using rule 26 (GSPN)

    TransitionsDef  go to state 36
    redifinitions   go to state 37


state 18

   48 definitions: PlacesDef . TransitionsDef InArcs OutArcs
   49            | PlacesDef . TransitionsDef InArcs OutArcs Inhibitors

    transitions  shift, and go to state 35

    TransitionsDef  go to state 38


state 19

   28 declarations: Constants Sizes . Lists

    PList  shift, and go to state 20
    TList  shift, and go to state 21

    Lists            go to state 39
    PlacesList       go to state 23
    TransitionsList  go to state 24


state 20

   42 PlacesList: PList . EQ '{' PLabels '}' SEMICOLON

    EQ  shift, and go to state 40


state 21

   45 TransitionsList: TList . EQ '{' TLabels '}' SEMICOLON

    EQ  shift, and go to state 41


state 22

   29 declarations: Sizes Lists .

    $default  reduce using rule 29 (declarations)


state 23

   36 Lists: PlacesList . TransitionsList

    TList  shift, and go to state 21

    TransitionsList  go to state 42


state 24

   37 Lists: TransitionsList . PlacesList

    PList  shift, and go to state 20

    PlacesList  go to state 43


state 25

   31 Constants: Constant Constants .

    $default  reduce using rule 31 (Constants)


state 26

   32 Sizes: NbPlaces NbTransitions .

    $default  reduce using rule 32 (Sizes)


state 27

   33 Sizes: NbTransitions NbPlaces .

    $default  reduce using rule 33 (Sizes)


state 28

   39 NbPlaces: NbPl EQ str . SEMICOLON

    SEMICOLON  shift, and go to state 44


state 29

   38 NbPlaces: NbPl EQ ival . SEMICOLON

    SEMICOLON  shift, and go to state 45


state 30

   41 NbTransitions: NbTr EQ str . SEMICOLON

    SEMICOLON  shift, and go to state 46


state 31

   40 NbTransitions: NbTr EQ ival . SEMICOLON

    SEMICOLON  shift, and go to state 47


state 32

   34 Constant: Const INT str . EQ IntStringFormula SEMICOLON

    EQ  shift, and go to state 48


state 33

   35 Constant: Const DOUBLE str . EQ RealStringFormula SEMICOLON

    EQ  shift, and go to state 49


state 34

   50 PlacesDef: marking EQ . '{' PLACES '}' SEMICOLON

    '{'  shift, and go to state 50


state 35

   54 TransitionsDef: transitions . EQ '{' TRANSITIONS '}' SEMICOLON

    EQ  shift, and go to state 51


state 36

   89 redifinitions: TransitionsDef .

    $default  reduce using rule 89 (redifinitions)


state 37

   27 GSPN: declarations definitions redifinitions .

    $default  reduce using rule 27 (GSPN)


state 38

   48 definitions: PlacesDef TransitionsDef . InArcs OutArcs
   49            | PlacesDef TransitionsDef . InArcs OutArcs Inhibitors

    in  shift, and go to state 52

    InArcs  go to state 53


state 39

   28 declarations: Constants Sizes Lists .

    $default  reduce using rule 28 (declarations)


state 40

   42 PlacesList: PList EQ . '{' PLabels '}' SEMICOLON

    '{'  shift, and go to state 54


state 41

   45 TransitionsList: TList EQ . '{' TLabels '}' SEMICOLON

    '{'  shift, and go to state 55


state 42

   36 Lists: PlacesList TransitionsList .

    $default  reduce using rule 36 (Lists)


state 43

   37 Lists: TransitionsList PlacesList .

    $default  reduce using rule 37 (Lists)


state 44

   39 NbPlaces: NbPl EQ str SEMICOLON .

    $default  reduce using rule 39 (NbPlaces)


state 45

   38 NbPlaces: NbPl EQ ival SEMICOLON .

    $default  reduce using rule 38 (NbPlaces)


state 46

   41 NbTransitions: NbTr EQ str SEMICOLON .

    $default  reduce using rule 41 (NbTransitions)


state 47

   40 NbTransitions: NbTr EQ ival SEMICOLON .

    $default  reduce using rule 40 (NbTransitions)


state 48

   34 Constant: Const INT str EQ . IntStringFormula SEMICOLON

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 63


state 49

   35 Constant: Const DOUBLE str EQ . RealStringFormula SEMICOLON

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 72


state 50

   50 PlacesDef: marking EQ '{' . PLACES '}' SEMICOLON

    LB  shift, and go to state 73

    PLACES  go to state 74
    PLACE   go to state 75


state 51

   54 TransitionsDef: transitions EQ . '{' TRANSITIONS '}' SEMICOLON

    '{'  shift, and go to state 76


state 52

   74 InArcs: in . EQ '{' incells '}' SEMICOLON

    EQ  shift, and go to state 77


state 53

   48 definitions: PlacesDef TransitionsDef InArcs . OutArcs
   49            | PlacesDef TransitionsDef InArcs . OutArcs Inhibitors

    out  shift, and go to state 78

    OutArcs  go to state 79


state 54

   42 PlacesList: PList EQ '{' . PLabels '}' SEMICOLON

    str  shift, and go to state 80

    PLabels  go to state 81


state 55

   45 TransitionsList: TList EQ '{' . TLabels '}' SEMICOLON

    str  shift, and go to state 82

    TLabels  go to state 83


state 56

    2 IntStringFormula: str .

    $default  reduce using rule 2 (IntStringFormula)


state 57

    1 IntStringFormula: ival .

    $default  reduce using rule 1 (IntStringFormula)


state 58

    3 IntStringFormula: LB . IntStringFormula RB

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 84


state 59

   11 IntStringFormula: MIN . LB IntStringFormula COMMA IntStringFormula RB

    LB  shift, and go to state 85


state 60

   12 IntStringFormula: MAX . LB IntStringFormula COMMA IntStringFormula RB

    LB  shift, and go to state 86


state 61

    9 IntStringFormula: FLOOR . LB IntStringFormula RB
   10                 | FLOOR . LB IntStringFormula DIV IntStringFormula RB

    LB  shift, and go to state 87


state 62

    8 IntStringFormula: ABS . LB IntStringFormula RB

    LB  shift, and go to state 88


state 63

    4 IntStringFormula: IntStringFormula . PLUS IntStringFormula
    5                 | IntStringFormula . MINUS IntStringFormula
    6                 | IntStringFormula . MUL IntStringFormula
    7                 | IntStringFormula . POWER IntStringFormula
   34 Constant: Const INT str EQ IntStringFormula . SEMICOLON

    SEMICOLON  shift, and go to state 89
    MUL        shift, and go to state 90
    PLUS       shift, and go to state 91
    MINUS      shift, and go to state 92
    POWER      shift, and go to state 93


state 64

   15 RealStringFormula: str .

    $default  reduce using rule 15 (RealStringFormula)


state 65

   13 RealStringFormula: rval .

    $default  reduce using rule 13 (RealStringFormula)


state 66

   14 RealStringFormula: ival .

    $default  reduce using rule 14 (RealStringFormula)


state 67

   16 RealStringFormula: LB . RealStringFormula RB

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 94


state 68

   24 RealStringFormula: MIN . LB RealStringFormula COMMA RealStringFormula RB

    LB  shift, and go to state 95


state 69

   25 RealStringFormula: MAX . LB RealStringFormula COMMA RealStringFormula RB

    LB  shift, and go to state 96


state 70

   23 RealStringFormula: FLOOR . LB RealStringFormula RB

    LB  shift, and go to state 97


state 71

   22 RealStringFormula: ABS . LB RealStringFormula RB

    LB  shift, and go to state 98


state 72

   17 RealStringFormula: RealStringFormula . DIV RealStringFormula
   18                  | RealStringFormula . PLUS RealStringFormula
   19                  | RealStringFormula . MINUS RealStringFormula
   20                  | RealStringFormula . MUL RealStringFormula
   21                  | RealStringFormula . POWER RealStringFormula
   35 Constant: Const DOUBLE str EQ RealStringFormula . SEMICOLON

    SEMICOLON  shift, and go to state 99
    DIV        shift, and go to state 100
    MUL        shift, and go to state 101
    PLUS       shift, and go to state 102
    MINUS      shift, and go to state 103
    POWER      shift, and go to state 104


state 73

   53 PLACE: LB . str COMMA IntStringFormula RB SEMICOLON

    str  shift, and go to state 105


state 74

   50 PlacesDef: marking EQ '{' PLACES . '}' SEMICOLON
   52 PLACES: PLACES . PLACE

    LB   shift, and go to state 73
    '}'  shift, and go to state 106

    PLACE  go to state 107


state 75

   51 PLACES: PLACE .

    $default  reduce using rule 51 (PLACES)


state 76

   54 TransitionsDef: transitions EQ '{' . TRANSITIONS '}' SEMICOLON

    LB  shift, and go to state 108

    TRANSITIONS  go to state 109
    TRANSITION   go to state 110


state 77

   74 InArcs: in EQ . '{' incells '}' SEMICOLON

    '{'  shift, and go to state 111


state 78

   79 OutArcs: out . EQ '{' outcells '}' SEMICOLON

    EQ  shift, and go to state 112


state 79

   48 definitions: PlacesDef TransitionsDef InArcs OutArcs .
   49            | PlacesDef TransitionsDef InArcs OutArcs . Inhibitors

    inhibitor  shift, and go to state 113

    $default  reduce using rule 48 (definitions)

    Inhibitors  go to state 114


state 80

   43 PLabels: str .

    $default  reduce using rule 43 (PLabels)


state 81

   42 PlacesList: PList EQ '{' PLabels . '}' SEMICOLON
   44 PLabels: PLabels . COMMA str

    COMMA  shift, and go to state 115
    '}'    shift, and go to state 116


state 82

   46 TLabels: str .

    $default  reduce using rule 46 (TLabels)


state 83

   45 TransitionsList: TList EQ '{' TLabels . '}' SEMICOLON
   47 TLabels: TLabels . COMMA str

    COMMA  shift, and go to state 117
    '}'    shift, and go to state 118


state 84

    3 IntStringFormula: LB IntStringFormula . RB
    4                 | IntStringFormula . PLUS IntStringFormula
    5                 | IntStringFormula . MINUS IntStringFormula
    6                 | IntStringFormula . MUL IntStringFormula
    7                 | IntStringFormula . POWER IntStringFormula

    RB     shift, and go to state 119
    MUL    shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    POWER  shift, and go to state 93


state 85

   11 IntStringFormula: MIN LB . IntStringFormula COMMA IntStringFormula RB

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 120


state 86

   12 IntStringFormula: MAX LB . IntStringFormula COMMA IntStringFormula RB

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 121


state 87

    9 IntStringFormula: FLOOR LB . IntStringFormula RB
   10                 | FLOOR LB . IntStringFormula DIV IntStringFormula RB

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 122


state 88

    8 IntStringFormula: ABS LB . IntStringFormula RB

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 123


state 89

   34 Constant: Const INT str EQ IntStringFormula SEMICOLON .

    $default  reduce using rule 34 (Constant)


state 90

    6 IntStringFormula: IntStringFormula MUL . IntStringFormula

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 124


state 91

    4 IntStringFormula: IntStringFormula PLUS . IntStringFormula

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 125


state 92

    5 IntStringFormula: IntStringFormula MINUS . IntStringFormula

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 126


state 93

    7 IntStringFormula: IntStringFormula POWER . IntStringFormula

    str    shift, and go to state 56
    ival   shift, and go to state 57
    LB     shift, and go to state 58
    MIN    shift, and go to state 59
    MAX    shift, and go to state 60
    FLOOR  shift, and go to state 61
    ABS    shift, and go to state 62

    IntStringFormula  go to state 127


state 94

   16 RealStringFormula: LB RealStringFormula . RB
   17                  | RealStringFormula . DIV RealStringFormula
   18                  | RealStringFormula . PLUS RealStringFormula
   19                  | RealStringFormula . MINUS RealStringFormula
   20                  | RealStringFormula . MUL RealStringFormula
   21                  | RealStringFormula . POWER RealStringFormula

    RB     shift, and go to state 128
    DIV    shift, and go to state 100
    MUL    shift, and go to state 101
    PLUS   shift, and go to state 102
    MINUS  shift, and go to state 103
    POWER  shift, and go to state 104


state 95

   24 RealStringFormula: MIN LB . RealStringFormula COMMA RealStringFormula RB

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 129


state 96

   25 RealStringFormula: MAX LB . RealStringFormula COMMA RealStringFormula RB

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 130


state 97

   23 RealStringFormula: FLOOR LB . RealStringFormula RB

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 131


state 98

   22 RealStringFormula: ABS LB . RealStringFormula RB

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 132


state 99

   35 Constant: Const DOUBLE str EQ RealStringFormula SEMICOLON .

    $default  reduce using rule 35 (Constant)


state 100

   17 RealStringFormula: RealStringFormula DIV . RealStringFormula

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 133


state 101

   20 RealStringFormula: RealStringFormula MUL . RealStringFormula

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 134


state 102

   18 RealStringFormula: RealStringFormula PLUS . RealStringFormula

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 135


state 103

   19 RealStringFormula: RealStringFormula MINUS . RealStringFormula

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 136


state 104

   21 RealStringFormula: RealStringFormula POWER . RealStringFormula

    str    shift, and go to state 64
    rval   shift, and go to state 65
    ival   shift, and go to state 66
    LB     shift, and go to state 67
    MIN    shift, and go to state 68
    MAX    shift, and go to state 69
    FLOOR  shift, and go to state 70
    ABS    shift, and go to state 71

    RealStringFormula  go to state 137


state 105

   53 PLACE: LB str . COMMA IntStringFormula RB SEMICOLON

    COMMA  shift, and go to state 138


state 106

   50 PlacesDef: marking EQ '{' PLACES '}' . SEMICOLON

    SEMICOLON  shift, and go to state 139


state 107

   52 PLACES: PLACES PLACE .

    $default  reduce using rule 52 (PLACES)


state 108

   57 TRANSITION: LB . str COMMA dist COMMA PRIORITY COMMA WEIGHT RB SEMICOLON
   58           | LB . str COMMA dist COMMA PRIORITY COMMA WEIGHT COMMA MEMORY RB SEMICOLON
   59           | LB . str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE RB SEMICOLON
   60           | LB . str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE COMMA MEMORY RB SEMICOLON
   61           | LB . str COMMA IMDT COMMA PRIORITY COMMA WEIGHT RB SEMICOLON

    str  shift, and go to state 140


state 109

   54 TransitionsDef: transitions EQ '{' TRANSITIONS . '}' SEMICOLON
   56 TRANSITIONS: TRANSITIONS . TRANSITION

    LB   shift, and go to state 108
    '}'  shift, and go to state 141

    TRANSITION  go to state 142


state 110

   55 TRANSITIONS: TRANSITION .

    $default  reduce using rule 55 (TRANSITIONS)


state 111

   74 InArcs: in EQ '{' . incells '}' SEMICOLON

    LB  shift, and go to state 143

    incells  go to state 144
    incell   go to state 145


state 112

   79 OutArcs: out EQ . '{' outcells '}' SEMICOLON

    '{'  shift, and go to state 146


state 113

   84 Inhibitors: inhibitor . EQ '{' inhibcells '}' SEMICOLON

    EQ  shift, and go to state 147


state 114

   49 definitions: PlacesDef TransitionsDef InArcs OutArcs Inhibitors .

    $default  reduce using rule 49 (definitions)


state 115

   44 PLabels: PLabels COMMA . str

    str  shift, and go to state 148


state 116

   42 PlacesList: PList EQ '{' PLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 149


state 117

   47 TLabels: TLabels COMMA . str

    str  shift, and go to state 150


state 118

   45 TransitionsList: TList EQ '{' TLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 151


state 119

    3 IntStringFormula: LB IntStringFormula RB .

    $default  reduce using rule 3 (IntStringFormula)


state 120

    4 IntStringFormula: IntStringFormula . PLUS IntStringFormula
    5                 | IntStringFormula . MINUS IntStringFormula
    6                 | IntStringFormula . MUL IntStringFormula
    7                 | IntStringFormula . POWER IntStringFormula
   11                 | MIN LB IntStringFormula . COMMA IntStringFormula RB

    COMMA  shift, and go to state 152
    MUL    shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    POWER  shift, and go to state 93


state 121

    4 IntStringFormula: IntStringFormula . PLUS IntStringFormula
    5                 | IntStringFormula . MINUS IntStringFormula
    6                 | IntStringFormula . MUL IntStringFormula
    7                 | IntStringFormula . POWER IntStringFormula
   12                 | MAX LB IntStringFormula . COMMA IntStringFormula RB

    COMMA  shift, and go to state 153
    MUL    shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    POWER  shift, and go to state 93


state 122

    4 IntStringFormula: IntStringFormula . PLUS IntStringFormula
    5                 | IntStringFormula . MINUS IntStringFormula
    6                 | IntStringFormula . MUL IntStringFormula
    7                 | IntStringFormula . POWER IntStringFormula
    9                 | FLOOR LB IntStringFormula . RB
   10                 | FLOOR LB IntStringFormula . DIV IntStringFormula RB

    RB     shift, and go to state 154
    DIV    shift, and go to state 155
    MUL    shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    POWER  shift, and go to state 93


state 123
